<resources>
    <string name="app_name">Mobil USSD 2021</string>
    <string name="client_id" translatable="false">ikbol_israilov</string>
    <string name="uzmobile_code" translatable="false">*49350</string>
    <string name="beeline_code" translatable="false">*4026</string>
    <string name="mobiuz_code" translatable="false">*011500263</string>
    <string name="ucell_code" translatable="false">*20987</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibXVoYW1tYWRxb2RpciIsImEiOiJjazNmMXdoZXgwMGFlM210NmVmODAwZ3dxIn0.zv6J57Cgk6YDEZTBGO-Jaw</string>
    <string name="title_activity_map">Map</string>

    <string name="notification">Хабарлар</string>
    <string name="nav_operatorga_qongiroq">Операторга қонғирок</string>
    <string name="nav_darturchi_bilan_boglanish">Дастурчи билан боғланиш</string>
    <string name="nav_tilni_ozgartirish">Тилни ўзгартириш</string>
    <string name="nav_ulashish">Улашиш</string>
    <string name="nav_baxolash">Бахолаш</string>
    <string name="inter">Интернет пакетлар</string>
    <string name="tarif">Тарифлар</string>
    <string name="smstoplam">СМС Тўпламлар</string>
    <string name="daqiqatoplamlar">Дақиқа тўпламлар</string>
    <string name="foydali">Фойдали</string>
    <string name="xizmatlar">Хизматлар</string>
    <string name="balans">Баланс</string>
    <string name="trafik">Трафик</string>
    <string name="ucellslogan">Хаётни яхшилик сари ўзгартириб!</string>
    <string name="beelineslogan">Етакчи. Ишончли. Инноватцион.</string>
    <string name="mobislogan">Рақамли имкониятлар сари!</string>
    <string name="perfectslogan">Perfectum! Бугун! Абадий!</string>
    <string name="uzmobileslogan">Ишончли алоқа мобил оператори</string>


    <string name="yangiliklar">Янгиликлар</string>
    <string name="dasturhaqida">Дастур хақида</string>
    <string name="batafsil">Батафсил</string>
    <string name="activlashtirish">Активлаштириш</string>
    <string name="shartlar">Фойдаланиш шартлари</string>

</resources>
